enum for resource types
