# swagger.yaml
@@ -131,7 +131,10 @@ definitions:
       resource_type:
         type: string
         description: The type of resource
-        # TODO - enum for these?
+        enum:
+          - Text
+          - Link
+          - Image
       text:
         type: string
         description: The text describing this resource
